--- a/index.html
+++ b/index.html
@@ -1,27 +1,12 @@
 <html>
     <head>
-        <title>Hi Janet</title>
+        <title>Page Time</title>
         <link rel="stylesheet" href="style.css" type="text/css">
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
         <div class="section" id="buttondiv">
             <button class="button" onclick="handleClick()">Hi Janet</button>
-        </div>
-        <div>
-            <p class="raindivs">hello</p>
-            <div>
-                <p class="raindivs">hello</p>
-                <div>
-                    <p class="raindivs">hello</p>
-                    <div>
-                        <p class="raindivs">hello</p>
-                        <div>
-                            <p class="raindivs">hello</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </body>
 </html>
