--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="section" id="buttondiv">
-            <button class="button" onclick="handleClick()">Hi Janet</button>
+            <button class="button" onclick="handleClick()">Page Time Button</button>
         </div>
     </body>
 </html>
