--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
         <div class="section" id="buttondiv">
             <button class="button" onclick="handleClick()">Page Time Button</button>
         </div>
+        <div id="poppypic">
+            <img src="poppy.dng" alt="Cutest dog ever">
+        </div>
     </body>
 </html>
