--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
         <div class="section" id="buttondiv">
             <button class="button" onclick="handleClick()">Page Time Button</button>
         </div>
-        <div id="poppypic">
-            <img src="poppy.dng" alt="Cutest dog ever">
-        </div>
+        <img class="poppypic" src="poppy.dng" alt="Cutest dog ever" width="100%">
     </body>
 </html>
