--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <div class="parent" id="maindiv">
-            <div class="child" id="buttondiv">
-                <button class="button" onclick="handleClick()">Page Time Button</button>
-            </div>
             <div class="child" id="imgdiv">
                 <img class="poppypic" src="poppy.dng" alt="Cutest dog ever" width="100%">
+            </div>
+            <div class="child" id="buttondiv">
+                <button class="button" onclick="handleClick()">Here is Poppy. He's a good boy.</button>
             </div>
         </div>
     </body>
