click anywhere in parent div for sound?

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
-        <div class="parent" id="maindiv">
+        <div class="parent" id="maindiv" onclick="handleClick()">
             <div class="child" id="imgdiv">
                 <img class="poppypic" src="poppy.dng" alt="Cutest dog ever" width="100%">
             </div>
             <div class="child" id="buttondiv">
-                <button class="button" onclick="handleClick()">Here is Poppy. He's a good boy.</button>
+                <button class="button">Here is Poppy. He's a good boy.</button>
             </div>
         </div>
     </body>
